@@ -1,4 +1,7 @@
 2011-09-21 gabriel.oliveira
+* Add missing method to 'change-state' dialog
+
+2011-09-21 gabriel.oliveira
 * Show only new method of 'change-state' dialog
 
 2011-09-21 gabriel.oliveira
